# car-tweet-topic-modeling

./: .env.example  .gitignore  pyproject.toml
src/car_topic_modeling/analysis/: pipeline.py  semantic_based.py  token_based.py
src/car_topic_modeling/analysis/topic_modeling/: grid_search.py  io.py  modeler.py  types.py  vectorizer.py  visualization.py
src/car_topic_modeling/cli/: __init__.py  analysis_cmd.py  data_cmd.py
src/car_topic_modeling/config/: settings.py  types.py
src/car_topic_modeling/data/figures/bmw/: documents_datamap.html
src/car_topic_modeling/data/intents/: intent_mapper.json
src/car_topic_modeling/data/labelled/semantic_based/bmw/: original_tweets_labelled.csv
src/car_topic_modeling/data/labelled/token_based/MercedesBenz/: original_tweets_labelled.csv
src/car_topic_modeling/data/labelled/token_based/Toyota/: original_tweets_labelled.csv
src/car_topic_modeling/data/ngram/MercedesBenz/: clean_tweets_ngrams_1.csv  clean_tweets_ngrams_2.csv  clean_tweets_ngrams_3.csv  clean_tweets_ngrams_4.csv
src/car_topic_modeling/data/ngram/Toyota/: clean_tweets_ngrams_1.csv  clean_tweets_ngrams_2.csv  clean_tweets_ngrams_3.csv  clean_tweets_ngrams_4.csv
src/car_topic_modeling/data/ngram/bmw/: clean_tweets_ngrams_1.csv  clean_tweets_ngrams_2.csv  clean_tweets_ngrams_3.csv  clean_tweets_ngrams_4.csv
src/car_topic_modeling/data/processed/MercedesBenz/: original_tweets_clean.csv
src/car_topic_modeling/data/processed/Toyota/: original_tweets_clean.csv
src/car_topic_modeling/data/processed/bmw/: original_tweets_clean.csv
src/car_topic_modeling/data/raw/companies/MercedesBenz/: unique_conversation_ids.txt
src/car_topic_modeling/data/raw/companies/Toyota/: original_tweets.csv  unique_conversation_ids.txt
src/car_topic_modeling/data/raw/companies/bmw/: original_tweets.csv  unique_conversation_ids.txt
src/car_topic_modeling/preprocessing/: cleaner.py  pipeline.py
src/car_topic_modeling/utils/: constants.py  io.py
