[project]
name = "car-topic-modeling"
version = "0.1.0"
description = ""
authors = [
    {name = "matiasfrancia",email = "matiasfrancia1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

[tool.poetry]
packages = [{include = "car_topic_modeling", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
